...
  const val RADIO_EVERYONE = "radio_everyone"
  const val RADIO_FRIENDS = "radio_friends"
  const val RADIO_NONE = "radio_none"
}

object EmailSectionTestTags {
  const val CHANGE_EMAIL_TITLE = "change_email_title"
  const val NEW_EMAIL_INPUT = "new_email_input"
  const val NEW_EMAIL_ERROR_LABEL = "new_email_error_label"
  const val NEW_EMAIL_VALID_LABEL = "new_email_valid_label"
  const val CONFIRM_EMAIL_INPUT = "confirm_email_input"
  const val EMAILS_DONT_MATCH_LABEL = "emails_dont_match_label"
  const val PASSWORD_INPUT = "password_input"
  const val CHANGE_EMAIL_BUTTON = "change_email_button"
}

object PreferencesSectionTestTags {
  const val PREFERENCES_SECTION_TITLE = "preferences_section_title"
  const val RADIO_LIGHT = "radio_light"
  const val RADIO_DARK = "radio_dark"
...
